# everquest-mcp

./: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/scripts/: sign-bundle.mjs
.github/workflows/: build-eq-partner.yml
artifacts/api-server/public/partner/: latest.json
artifacts/eq-partner-client/: README.md  index.html  package.json  vite.config.ts
artifacts/eq-partner-client/src/: App.tsx
artifacts/eq-partner-client/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/eq-partner-client/src-tauri/src/: lib.rs  log_parser.rs  main.rs  sync_engine.rs
src/sources/: base.ts  eqresource.ts  eqtraders.ts  fanra.ts  lucy.ts  raidloot.ts  zliz.ts
